Trying to fix menu button on mobile

--- a/style.css
+++ b/style.css
@@ -93,11 +93,6 @@ footer img {
 		background-color: #000000;
 	}
 
-	.cabecalho__menu i::before {
-		content: "Menu";
-		font-size: 24px;
-	}
-
 	.logotipo_header_mobile {
 		grid-column: 4;
 		grid-row: 1;
